openshift/manifest/postgresql.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        deployment: postgres
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: postgres-config
          image: registry.redhat.io/rhel9/postgresql-13:latest
          name: postgresql-13
          ports:
            - containerPort: 5432
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports:
    - name: tcp
      port: 5432
  selector:
    app: postgres
    deployment: postgres
