openshift/manifest/kafka-ui.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-ui
    app.kubernetes.io/component: kafka-ui
    app.kubernetes.io/instance: kafka-ui
    app.kubernetes.io/name: kafka-ui
  name: kafka-ui
spec:
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
        deployment: kafka-ui
    spec:
      containers:
      - env:
        - name: KAFKA_CLUSTERS_0_NAME
          value: AMQ Streams
        - name: KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS
          value: kafka-kafka-bootstrap:9092
        image: docker.io/provectuslabs/kafka-ui:latest
        name: kafka-ui
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-ui
    app.kubernetes.io/component: kafka-ui
    app.kubernetes.io/instance: kafka-ui
    app.kubernetes.io/name: kafka-ui
  name: kafka-ui
spec:
  ports:
    - name: web
      port: 8080
  selector:
    app: kafka-ui
    deployment: kafka-ui

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kafka-ui
    app.kubernetes.io/component: kafka-ui
    app.kubernetes.io/instance: kafka-ui
    app.kubernetes.io/name: kafka-ui
  name: kafka-ui
spec:
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: kafka-ui
    weight: 100
  wildcardPolicy: None
