openshift/manifest/sms-processor.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sms-processor
    app.openshift.io/runtime: quarkus
  name: sms-processor
spec:
  selector:
    matchLabels:
      app: sms-processor
  template:
    metadata:
      labels:
        app: sms-processor
        deployment: sms-processor
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: sms-processor-config
        - secretRef:
            name: sms-processor-config
        image: docker.io/audomsak/sms-processor:1.0
        name: sms-processor
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: sms-processor
  name: sms-processor
spec:
  ports:
    - name: web
      port: 8080
  selector:
    app: sms-processor
    deployment: sms-processor

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sms-processor
  name: sms-processor
spec:
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sms-processor
    weight: 100
  wildcardPolicy: None
